[project]
name = "dotflow_cloud"
version = "0.1.0"
description = ""
requires-python = ">=3.9"
dependencies = [
    "dotflow (==1.0.0.dev5)",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest"]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
dotflow = { version = "==1.0.0.dev5", source = "testpypi" }
